# Dendro-GRCA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BH_Simulation/: CMakeLists.txt
BH_Simulation/include/: bh.h  interpolate.h  visualize.h
BH_Simulation/src/: bh.cpp  bh_example.cpp  visualize.cpp
CodeGen/: dendro.py
FEM/examples/src/: stencilExample.cpp
IO/vtk/include/: oct2vtk.h
IO/vtk/src/: oct2vtk.cpp
MassGrav/: CMakeLists.txt
MassGrav/cuda_gr/src/: gpuBSSNExample.cpp
MassGrav/include/: TPUtilities.h  TwoPunctures.h  aeh_solver.h  bh.h  bssnCtx.h  dataUtils.h  derivs.h  grDef.h  grUtils.h  grUtils.tcc  gwExtract.h.in  massgrav_constraints.h  parameters.h  profile_params.h  rhs.h  rkMASSGRAV.h  zipUnzipTest.h
MassGrav/mathematica_scripts/: BSSN-MG.nb
MassGrav/pars/: test_par.json
MassGrav/rhs_gen_scripts/: constraints.py  dendro.py  massgrav.py
MassGrav/scripts/: getstrain.py
MassGrav/src/: At_rhs.cpp  B_rhs.cpp  B_rhs_eta_const.cpp  B_rhs_eta_func.cpp  CalGt.cpp  Gt_rhs.cpp  Gt_rhs_s1_.cpp  Gt_rhs_s2_.cpp  Gt_rhs_s3_.cpp  Gt_rhs_s4_.cpp  Gt_rhs_s5_.cpp  Gt_rhs_s6_.cpp  Gt_rhs_s7_.cpp  K_rhs.cpp  TPNewton.cpp  TPUtilities.cpp  TwoPunctures.cpp  a_rhs.cpp  b_rhs.cpp  bssnCtx.cpp  bssneqs_eta_func_rochester_gauge.cpp  bssneqs_eta_func_standard_gauge.cpp  checkDerivatives.cpp  chi_rhs.cpp  dataUtils.cpp  derivs.cpp  gr.cpp  grUtils.cpp  gr_nuts.cpp  gt_rhs.cpp  massgrav_constraints.cpp  massgraveqs.cpp  massgraveqs_old  parameters.cpp  physcon.cpp  physconeqs.cpp  profile_params.cpp  rhs.cpp  rkMASSGRAV.cpp
NLSigma/src/: nlsm.cpp
ODE/include/: blkAsync.h  ctx.h  enuts.h  enutsOp.h  ets.h
ODE/src/: enutsOp.cpp
QuadGrav/: CMakeLists.txt
QuadGrav/cuda_gr/src/: gpuTestBed.cpp  profile_gpu.cpp  rhs_cuda.cu
QuadGrav/include/: aeh_solver.h  bh.h  bssnCtx.h  dataUtils.h  gr.h  grDef.h  grUtils.h  grUtils.tcc  gwExtract.h.in  parameters.h  physcon.h  profile_params.h  quadgrav_constraints.h  rhs.h  rkQUADGRAV.h  zipUnzipTest.h
QuadGrav/pars/: test_par.json
QuadGrav/rhs_gen_scripts/: constraints.py  constraints_stages.py  dendro.py  quadgrav.py  quadgrav_new.py  quadgrav_stages.py
QuadGrav/scripts/: gen_qgrhs_code  quadgravrhs_dealloc.h  quadgravrhs_dealloc_adv.h  quadgravrhs_derivs.h  quadgravrhs_derivs_adv.h  quadgravrhs_ko_derivs.h  quadgravrhs_memalloc.h  quadgravrhs_memalloc_adv.h
QuadGrav/src/: At_rhs.cpp  B_rhs.cpp  B_rhs_eta_const.cpp  B_rhs_eta_func.cpp  CalGt.cpp  Gt_rhs.cpp  Gt_rhs_s1_.cpp  Gt_rhs_s2_.cpp  Gt_rhs_s3_.cpp  Gt_rhs_s4_.cpp  Gt_rhs_s5_.cpp  Gt_rhs_s6_.cpp  Gt_rhs_s7_.cpp  K_rhs.cpp  TPCoordTransf.cpp  TPEquations.cpp  TPFuncAndJacobian.cpp  TwoPunctures.cpp  a_rhs.cpp  b_rhs.cpp  bssnCtx.cpp  bssneqs_eta_const.cpp  bssneqs_eta_func.cpp  checkDerivatives.cpp  chi_rhs.cpp  dataUtils.cpp  gr.cpp  grUtils.cpp  gr_nuts.cpp  gt_rhs.cpp  parameters.cpp  physcon.cpp  physconeqs.cpp  profile_params.cpp  quadgrav_constraints.cpp  quadgraveqs.cpp  rhs.cpp  rhsTestBed.cpp  rkQUADGRAV.cpp  zipUnzipTest.cpp
include/: dvec.h  mathUtils.h  mesh.h  mesh.tcc  meshUtils.h
include/test/: meshTestUtils.h
src/: mesh.cpp  meshUtils.cpp
test/include/: meshTestUtils.h
